--- a/fight/src/main/resources/application.properties
+++ b/fight/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fightDB?userTimezone
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-plataform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show_sql = true
